force-app/src/objects/PagesApi__Page__c.object
<CustomObject>
    <description>Stores the configurations for custom pages created in Fonteva&apos;s Publisher (PagesApi).</description>
    <fields>
        <fullName>OrderApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked access to the Page is controlled by the related user-defined Access Permissions. Defaults unchecked - essentially enabling all public and authenticated Users access to the Page and related content.</description>
        <inlineHelpText>When checked access to the Page is controlled by the related user-defined Access Permissions. Defaults unchecked - essentially enabling all public and authenticated Users access to the Page and related content.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Auth_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the Page will require a User to be authenticated either through the Customer Portal, Partner Portal, or Community. Defaults unchecked.</description>
        <inlineHelpText>When checked the Page will require a User to be authenticated either through the Customer Portal, Partner Portal, or Community. Defaults unchecked.</inlineHelpText>
        <label>Auth Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Enable_SEF_URLs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked URLs will be re-written into a user friendly format based on the configurations of the Site and Page &quot;Slug&quot; fields. Defaults unchecked.</description>
        <inlineHelpText>When checked URLs will be re-written into a user friendly format based on the configurations of the Site and Page &quot;Slug&quot; fields. Defaults unchecked.</inlineHelpText>
        <label>Enable SEF URLs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related form.</description>
        <inlineHelpText>Link to the related form.</inlineHelpText>
        <label>Form</label>
        <referenceTo>PagesApi__Form__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Page is made available either online or in the backend staff interface.</description>
        <inlineHelpText>When checked, the Page is made available either online or in the backend staff interface.</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** SYSTEM **</description>
        <inlineHelpText>** SYSTEM **</inlineHelpText>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related page menu configuration.</description>
        <inlineHelpText>Link to the related page menu configuration.</inlineHelpText>
        <label>Menu</label>
        <referenceTo>PagesApi__Menu__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__No_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Google, Yahoo, and Bing will be instructed to not archive the page/cache the Page. Defaults unchecked.</description>
        <inlineHelpText>When checked, Google, Yahoo, and Bing will be instructed to not archive the page/cache the Page. Defaults unchecked.</inlineHelpText>
        <label>No Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__No_Follow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Google, Yahoo, and Bing will be instructed to not follow and index any links on the Page. Defaults unchecked.</description>
        <inlineHelpText>When checked, Google, Yahoo, and Bing will be instructed to not follow and index any links on the Page. Defaults unchecked.</inlineHelpText>
        <label>No Follow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__No_Index__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Google, Yahoo, and Bing will be instructed to not include the Page in Search Engine Results. Defaults checked.</description>
        <inlineHelpText>When checked, Google, Yahoo, and Bing will be instructed to not include the Page in Search Engine Results. Defaults checked.</inlineHelpText>
        <label>No Index</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Page_ID__c</fullName>
        <description>Auto incrementing number used as an External ID for the Page.</description>
        <displayFormat>{00}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Auto incrementing number used as an External ID for the Page.</inlineHelpText>
        <label>Page ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PagesApi__Page_URL__c</fullName>
        <description>** System Calculated ** The URL for the page.</description>
        <inlineHelpText>** System Calculated ** The URL for the page.</inlineHelpText>
        <label>Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__SEF_Slug__c</fullName>
        <description>Search Engine Friendly (SEF) &quot;Slug&quot; to use when re-writing URLs to improve usability and SEO.</description>
        <inlineHelpText>Search Engine Friendly (SEF) &quot;Slug&quot; to use when re-writing URLs to improve usability and SEO.</inlineHelpText>
        <label>SEF Slug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Site_Template_Key__c</fullName>
        <description>** System Calculated ** The template key used for the parent site.</description>
        <formula>PagesApi__Site__r.PagesApi__Site_Template_Key__c</formula>
        <inlineHelpText>** System Calculated ** The template key used for the parent site.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to the Site where the Page will be published.</description>
        <inlineHelpText>** Required ** Link to the Site where the Page will be published.</inlineHelpText>
        <label>Site</label>
        <referenceTo>PagesApi__Site__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to the theme to use for the Page.</description>
        <inlineHelpText>** Required ** Link to the theme to use for the Page.</inlineHelpText>
        <label>Theme</label>
        <referenceTo>PagesApi__Theme__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Title_Tag__c</fullName>
        <description>** Required ** HTML Title tag.</description>
        <inlineHelpText>** Required ** HTML Title tag.</inlineHelpText>
        <label>Title Tag</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Visualforce_Page__c</fullName>
        <description>The API name (with namespace) of the visualforce page referenced by this page configuration.</description>
        <inlineHelpText>The API name (with namespace) of the visualforce page referenced by this page configuration.</inlineHelpText>
        <label>Visualforce Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Visualforce_Template__c</fullName>
        <description>** Required ** The Visualforce Page to use as the Template for the Page. Defaults to the value of the &quot;Default Visualforce Template&quot; configured for the related Site.</description>
        <inlineHelpText>** Required ** The Visualforce Page to use as the Template for the Page. Defaults to the value of the &quot;Default Visualforce Template&quot; configured for the related Site.</inlineHelpText>
        <label>Visualforce Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Page</label>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>